# orbital-witness

./: README.md  setup.sh  start.sh
front-end/: .gitignore  package-lock.json  package.json
front-end/.storybook/: preview.ts
front-end/src/app/: layout.tsx
front-end/src/app/dashboard/: UsageChart.tsx  UsageTable.tsx  page.tsx  sortData.ts  types.ts  useSorting.ts
front-end/src/app/test-page/: page.tsx
front-end/src/lib/: apiClient.ts
front-end/src/stories/: UsageTable.stories.ts  mockData.ts
server/: app.py  openapi.yaml  pyproject.toml
server/services/usage/: constants.py  cost_functions.py  usage_service.py
server/tests/cost_functions/: test_calculate_total_cost.py  test_character_count_cost.py  test_filter_words.py  test_is_palindrome.py  test_third_vowels_cost.py  test_unique_word_bonus.py  test_word_lengths_cost.py
