[tool.poetry]
name = "orbital-witness-backend"
version = "0.1.0"
description = "A simple  Flask web server project"
authors = ["Will Jenkins <william.jenkins.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-cors = "^4.0.1"
ruff = "^0.4.6"
requests = "^2.32.3"
connexion = {extras = ["flask", "swagger-ui"], version = "^3.1.0"}
uvicorn = "^0.30.0"
starlette = "^0.37.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"